--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="ht">
 <head>
   <meta charset="utf-8" />
   <!-- META VIEWPORT (minimal change to disable pinch-zoom) -->
