--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     /*******************************
      * CONFIG
      *******************************/
-    const AD_REDIRECT_URL = "https://pantherinvincible.com/cdz2dffrd?key=5dc5b83c663fd8944f650feafdc6c600";
+    const AD_REDIRECT_URL = "https://www.effectivegatecpm.com/h5d719bhae?key=5d76ce4bb78c40c2664a52c31c4f62e8";
     const AD_PROXY_PREFIX = null;
     const SKIP_DELAY_MS = 7000;
 
@@ -627,7 +627,9 @@
         lastTouch = now;
       }, { passive: false });
     })();
-  </script><script type='text/javascript' src='//pantherinvincible.com/1d/e3/21/1de321cf7681c76a64e7cdb2ab95a037.js'></script>  <script>
+  </script> 
+  <script type='text/javascript' src='//pl28135197.effectivegatecpm.com/3b/5a/09/3b5a097d28211945158c20a3f4879260.js'></script>
+  <script>
 (function(){
   const PAYPAL_URL = 'https://www.paypal.com/ncp/payment/MCJHCJ85AC5AJ';
 
