--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     /*******************************
      * CONFIG
      *******************************/
-    const AD_REDIRECT_URL = "https://www.effectivegatecpm.com/h5d719bhae?key=5d76ce4bb78c40c2664a52c31c4f62e8";
+    const AD_REDIRECT_URL = "https://www.effectivegatecpm.com/sb8frb30?key=b74cd3abdfc6db3be0c0b8d215fcb582";
     const AD_PROXY_PREFIX = null;
     const SKIP_DELAY_MS = 7000;
 
